hls playback: make cursor behave correctly on firefox

--- a/src/plugins/hls_playback/public/style.css
+++ b/src/plugins/hls_playback/public/style.css
@@ -4,4 +4,5 @@
   width: 100%;
   background-color: black;
   display: block;
+  pointer-events: none;
 }
